--- a/public/index.html
+++ b/public/index.html
@@ -380,11 +380,11 @@ Please fill out the following form and answer a few questions and the stickers w
 </label></li> <li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.1328697389" value="On our Google+" id="group_1328697389_4" role="radio" class="ss-q-radio" aria-label="On our Google+" required="" aria-required="true"></span>
 <span class="ss-choice-label">On our Google+</span>
 </label></li> <li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.1328697389" value="On a Conference/Event" id="group_1328697389_5" role="radio" class="ss-q-radio" aria-label="On a Conference/Event" required="" aria-required="true"></span>
-<span class="ss-choice-label">On a Conference/Event</span>
+<span class="ss-choice-label">On a conference/event</span>
 </label></li> <li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.1328697389" value="Saw it live (eg. someones laptop)" id="group_1328697389_6" role="radio" class="ss-q-radio" aria-label="Saw it live (eg. someones laptop)" required="" aria-required="true"></span>
-<span class="ss-choice-label">Saw it live (eg. someones laptop)</span>
+<span class="ss-choice-label">Saw it live (eg. someone's laptop)</span>
 </label></li> <li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.1328697389" value="On friends tw, fb, g+ ..." id="group_1328697389_7" role="radio" class="ss-q-radio" aria-label="On friends tw, fb, g+ ..." required="" aria-required="true"></span>
-<span class="ss-choice-label">On friends tw, fb, g+ ...</span>
+<span class="ss-choice-label">On friends Twitter, Facebook, Google+ ...</span>
 </label></li> <li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.1328697389" value="__other_option__" id="group_1328697389_8" role="radio" class="ss-q-radio ss-q-other-toggle" required="" aria-required="true"></span>
 <span class="ss-choice-label">Other:</span></label>
 <span class="ss-q-other-container goog-inline-block"><input type="text" name="entry.1328697389.other_option_response" value="" class="ss-q-other" id="entry_1328697389_other_option_response" dir="auto" aria-label="Other"></span>
