--- a/public/index.html
+++ b/public/index.html
@@ -437,4 +437,16 @@ Please fill out the following form and answer a few questions and the stickers w
 <script type='text/javascript' src='/static/forms/client/js/2220651830-formviewer_prd.js'></script>
 <script type="text/javascript">H5F.setup(document.getElementById('ss-form'));
           _initFormViewer(
-            "[100,,[]\n]\n");</script></div></body></html>
+          "[100,,[]\n]\n");</script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-28072419-3', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
+  </div></body></html>
